RESOLVED FIXED290274
[JSC] Do not use smull when shift is not following
https://bugs.webkit.org/show_bug.cgi?id=290274
Summary [JSC] Do not use smull when shift is not following
Yusuke Suzuki
Reported 2025-03-22 16:26:19 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-22 16:26:29 PDT
Yusuke Suzuki
Comment 2 2025-03-22 16:28:08 PDT
EWS
Comment 3 2025-03-23 11:46:14 PDT
Committed 292564@main (fa884184b683): <https://commits.webkit.org/292564@main> Reviewed commits have been landed. Closing PR #42894 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.