[JSC] Do not use smull when shift is not following https://bugs.webkit.org/show_bug.cgi?id=290274 rdar://147666338

Reviewed by Keith Miller.

We found that using smull for MulHigh has slight perf regression when
shift is not following after that. So this patch tweaks usage of that.

* Source/JavaScriptCore/b3/B3ReduceStrength.cpp:

Canonical link: https://commits.webkit.org/292564@main